<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/cardview_light_background"
    android:padding="10dp">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:gravity="center">

       <LinearLayout
           android:id="@+id/self_shift_start_time"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="1"
           android:gravity="center"
           >

           <TextView

               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
               android:text="@string/tx_self_shift_start"
               android:textColorHighlight="@color/cardview_light_background" />

            <TextView
                android:id="@+id/label_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="－－  ：－－"/>

       </LinearLayout>

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/baseline_keyboard_arrow_right_24"/>

       <LinearLayout
           android:id="@+id/self_shift_end_time"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="1"
           android:gravity="center">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
               android:text="@string/tx_self_shift_end"
               android:textColorHighlight="@color/cardview_light_background"/>

           <TextView
               android:id="@+id/label_end_time"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="－－  ：－－"/>

       </LinearLayout>

   </LinearLayout>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/text_field_boxes_occupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelText="@string/label_occupation"
        app:panelBackgroundColor="@color/cardview_light_background"
        app:iconSignifier="@drawable/baseline_view_headline_24"
        >

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/extended_edit_text_occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hasClearButton="true"
            />

<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end|top"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:text="a"/>-->
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/text_field_boxes_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:panelBackgroundColor="@color/cardview_light_background"
        app:labelText="@string/label_memo"
        app:iconSignifier="@drawable/baseline_create_24"
        >

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/extended_edit_text_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hasClearButton="true"
            />

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ok" />


</LinearLayout>